# tradebot-rs

./: .gitmodules  Cargo.toml  README.md  launch.sh  requirements.txt
algo-service/: Cargo.toml
algo-service/src/: algo.rs  config.rs  main.rs  service.rs
algo-service/src/cpp_algo/: cpp_algo.rs  mod.rs
algo-service/src/py_algo/: mod.rs  py_algo.rs
algo-service/src/rust_algo/: mod.rs  rust_algo.rs
app-service/: Cargo.toml
app-service/src/: algofeed.rs  config.rs  datafeed.rs  logger.rs  main.rs  orders.rs  overall_pnl.rs  service.rs  strategy_pnl.rs
broker-service/: Cargo.toml
broker-service/src/: broker.rs  config.rs  main.rs  paper_trader.rs  service.rs
common/: Cargo.toml
common/src/: config.rs  error.rs  lib.rs  utils.rs
config/algo/: cpp_algo.yml  py_algo.yml  rust_algo.yml
config/broker/: paper_trader.yml
config/datafeed/: parquet.yml  s3.yml
config/run/: run_resim.yml
config/service/: algo_service.yml  app_service.yml  broker_service.yml  datafeed_service.yml  logger_service.yml  order_service.yml  pnl_service.yml  service.yml
datafeed-service/: Cargo.toml
datafeed-service/src/: config.rs  datafeed.rs  main.rs  ninjatrader.rs  parquet.rs  s3.rs  service.rs
docker/: Dockerfile
logger-service/: Cargo.toml
logger-service/src/: config.rs  main.rs  overall_logger.rs  overall_reader.rs  service.rs  strategy_logger.rs  strategy_reader.rs
main/: Cargo.toml
main/src/: main.rs
order-service/: Cargo.toml
order-service/src/: advice.rs  config.rs  main.rs  service.rs
pnl-service/: Cargo.toml
pnl-service/src/: config.rs  main.rs  manager.rs  overall.rs  position.rs  service.rs
