[package]
name = "datafeed-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
databento = "0.4.2"
snafu = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
async-trait = "0.1.74"
streaming-iterator = "0.1.9"
serde_yaml = { version = "0.9.14" }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "sync", "time"] }
zenoh-node = { git = "https://github.com/sayedrasheed/zenoh-node-rs.git" }
tradebot-protos = { git = "https://github.com/sayedrasheed/tradebot-protos-rs.git" }
common = { path = "../common"}
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18",  features=["env-filter"] }
futures = "0.3.30"
spin_sleep = "1.2.0"
tokio-util = {version = "0.7.11", features=["time"] }
prost = "0.12.6"
parquet = "52.0.0"
arrow-array = "52.0.0"
rand = "0.8.5"
bytes = "1.9.0"
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.68.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
