[package]
name = "logger-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
snafu = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
async-trait = "0.1.74"
serde_yaml = { version = "0.9.14" }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "sync"] }
zenoh-node = { git = "https://github.com/sayedrasheed/zenoh-node-rs.git" }
tradebot-protos = { git = "https://github.com/sayedrasheed/tradebot-protos-rs.git" }
common = { path = "../common"}
chrono = "0.4.31"
serde_json = "1.0.113"
prost = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"

