[package]
name = "pnl-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1.35.1", features = ["full"] }
serde_yaml = { version = "0.9.14" }
snafu = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
zenoh-node = { git = "https://github.com/sayedrasheed/zenoh-node-rs.git" }
tradebot-protos = { git = "https://github.com/sayedrasheed/tradebot-protos-rs.git" }
common = { path = "../common"}
ta = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono-tz = "0.10.0"
chrono = "0.4.38"
